feat: add E2E testing setup with Playwright
- Install Playwright and configure for E2E testing
- Create test data setup helpers and API client
- Implement E2E tests for all Phase 1-3 features:
  * Authentication (login, logout, protected routes)
  * Work Order Reception (quick add, creation, filters)
  * Work Order Detail (workflow, status transitions)
  * Edit Work Order (permissions, field access)
- Add Page Object Models for better test organization
- Create test documentation (checklist and results)
- Update VS Code extensions recommendations
- Add E2E test scripts to package.json

--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,11 @@ coverage/
 .jest/
 .jest-cache/
 
+# E2E Test results
+e2e/test-results/
+e2e/playwright-report/
+e2e/playwright/.cache/
+
 # Misc
 *.pid
 *.seed
