--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "test": "npm run test:backend && npm run test:frontend",
     "test:backend": "cd backend && npm test",
     "test:frontend": "cd frontend && npm test",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
     "lint": "npm run lint:backend && npm run lint:frontend",
     "lint:backend": "cd backend && npm run lint",
     "lint:frontend": "cd frontend && npm run lint",
@@ -45,8 +50,10 @@
   "author": "ASIC Repair Pro Team",
   "license": "MIT",
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "concurrently": "^8.2.2",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "playwright": "^1.56.1"
   },
   "workspaces": [
     "backend",
