--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,7 +5,12 @@
     "mhutchie.git-graph",
     "donjayamanne.githistory",
     "github.copilot",
-    "github.copilot-chat"
+    "github.copilot-chat",
+    "ms-playwright.playwright",
+    "humao.rest-client",
+    "rangav.vscode-thunder-client",
+    "usernamehw.errorlens",
+    "aaron-bond.better-comments"
   ]
 }
 
